# STM-USB-App

./: .gitignore  500-STM-GUI.spec  500-STM-GUI_UNIX.spec  DATAPATH.md  README.md  build_win.bat  build_win.ps1  main.spec  pyproject.toml  requirements.txt
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
measurements/: measurement_2025-04-03_14-43-54.csv  measurement_2025-04-03_14-46-27.csv  measurement_2025-04-03_14-46-39.csv  measurement_2025-04-04_11-57-29.csv  measurement_2025-04-04_11-57-36.csv  measurement_2025-04-04_11-57-54.csv  measurement_2025-04-04_11-58-14.csv  measurement_2025-04-04_11-58-43.csv  measurement_2025-04-04_11-59-45.csv  measurement_2025-04-04_12-04-03.csv  measurement_2025-04-04_12-04-42.csv  measurement_2025-04-04_12-05-41.csv  measurement_2025-04-04_12-06-28.csv  measurement_2025-04-04_12-07-06.csv  measurement_2025-04-04_12-07-38.csv  measurement_2025-04-04_12-27-41.csv  measurement_2025-04-04_13-14-43.csv  measurement_2025-04-04_13-18-16.csv  measurement_2025-04-04_14-21-06.csv
src/: __init__.py  adjust.py  com_port_utils.py  config.ini  config_utils.py  main.py  main.spec  measure.py  parameter.py  parameters.py  rtm500.spec  settings.py  sinus.py  terminal.py  tunnel.py  usb_connection.py  usb_receive.py
src/gui/: app_manager.py  menu.py  tooltip.py
