[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkinter-usb-app"
version = "0.1.0"
description = "A Tkinter USB application"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "matplotlib>=3.4.3",
    "configparser>=5.0.2"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"tkinter-usb-app" = ["assets/icons/stm_symbol.ico", "src/config.ini"]